add typenames to db and API endpoints to grab them
