# src/handlers/mod.rs
@@ -1,2 +1,3 @@
 pub mod health;
-pub mod systems; 
+pub mod systems;
+pub mod type_names; 
